--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "dependencies": {
         "@fortawesome/fontawesome-svg-core": "^1.2.28",
         "@fortawesome/free-solid-svg-icons": "^5.13.0",
-        "@fortawesome/vue-fontawesome": "^0.1.9"
+        "@fortawesome/vue-fontawesome": "^0.1.9",
+        "vue-loading-template": "^1.3.2"
     }
 }
